src/parse/snapshots/camello__parse__tests__statements__success__anonymous_sub_empty_attribute.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "f"
    BLOCK
      `{` "{"
      SUB_DEF
        `sub` "sub"
        SUB_NAME
        ATTR
          `:` ":"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              LITERAL
                number "0"
          `}` "}"
      `}` "}"
