src/parse/snapshots/camello__parse__tests__statements__success__for_initializer_trailing_comma.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  LOOP_STMT
    `for` "for"
    FOREACH_HEADER
      PAREN_EXPR
        `(` "("
        LIST_EXPR
          LITERAL
            number "1"
          `,` ","
          LITERAL
            number "2"
          `,` ","
        `)` ")"
    BLOCK
      `{` "{"
      `}` "}"
