src/parse/snapshots/camello__parse__tests__statements__success__given_when_continue.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  GIVEN_STMT
    `given` "given"
    `(` "("
    LIST_EXPR
      SCALAR_VAR
        `$` "$"
        identifier "variable"
    `)` ")"
    BLOCK
      `{` "{"
      WHEN_CLAUSE
        `when` "when"
        `(` "("
        LIST_EXPR
          LITERAL
            string literal "'foo'"
        `)` ")"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              LIST_CALL_EXPR
                SUB_NAME
                  identifier "say"
                LIST_EXPR
                  LITERAL
                    string literal "'It was foo'"
            `;` ";"
          EXPR_STMT
            LIST_EXPR
              LIST_CALL_EXPR
                SUB_NAME
                  identifier "continue"
            `;` ";"
          `}` "}"
      EXPR_STMT
        LIST_EXPR
          LIST_CALL_EXPR
            SUB_NAME
              identifier "say"
            LIST_EXPR
              LITERAL
                string literal "'This is not reached after foo'"
        `;` ";"
      `}` "}"
