src/parse/snapshots/camello__parse__tests__statements__success__if_condition_trailing_comma.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  IF_STMT
    `if` "if"
    PAREN_EXPR
      `(` "("
      LIST_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "x"
        `,` ","
      `)` ")"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          LITERAL
            number "1"
      `}` "}"
